--- a/dexnet_saas/css/index.css
+++ b/dexnet_saas/css/index.css
@@ -12,6 +12,34 @@ body {
     padding: 1rem;
 }
 
+/* Progress bar */
+.progress-bar-container {
+    position: absolute;
+    width: 400px;
+    height: 22px;
+    bottom: -60px;
+    right: 25%;
+    left: 50%;
+    margin-left: -200px;
+}
+.progress-bar {
+    width: 400px;
+    height: 22px;
+	border-radius: 4px;
+	background: #FFF;
+	border: 1px solid #AAA;
+	overflow: hidden;
+}
+.progress-bar-bar {
+    height: 100%;
+    text-align: right;
+    line-height: 22px;
+    width: 100px;
+	background-image: url(pbar-ani.gif);
+	border-right: 1px solid #AAA;
+    transition: 0.2s
+}
+
 /* Upload button */
 .upload-arrow{
     text-align: center;
